# obuhersys

./: .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.js
dataset/: .copyright
dataset/basic/brokenCrypto/: .details  BrokenCrypto1.js  BrokenCrypto2.js  BrokenCrypto3.js  BrokenCrypto4.js  BrokenCrypto5.js  CorrectedCrypto.js  meta.yml
dataset/basic/brokenGCM/: .details  brokengcm.js  correctedgcm.js  meta.yml
dataset/basic/brokenHash/: .details  BrokenHash1.js  BrokenHash2.js  CorrectedHash.js  meta.yml
dataset/basic/ecbMode/: .details  CorrectedEcbMode.js  EcbMode1.js  meta.yml
dataset/basic/pbkdf2Parameters/: .details  Correctedpbkdf2.js  meta.yml  (+3 more)
dataset/contextsensitivity/: CorrectedCrypto.js
eval/: README.md  evaluate.py  examplecmd  ofunc  oproxy  print_metrics.py  pyproject.toml
ocheck/: README.md  package.json  tsconfig.json
ocheck/src/: checker.ts  checks.js  index.ts
ofunc/: .prettierignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
ofunc/src/: anthony_test.ts  hooks.ts  index.ts  injected.js  owo.js  playground.ts
oproxy/: .prettierrc.json  README.md  cryptoLog-1721785785393.txt  cryptoLog-1721785838013.txt  cryptoLog-1721785897088.txt  cryptoLog.txt  index.cjs  index.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.main.json  tsconfig.proxymodules.json
oproxy/src/: hooks.ts  index-globalPreload.ts  index-globalPreload.ts.old  index.js  index.ts  logParser.ts  playground.ts  playground2.ts  playgroundLoggerTest.ts
(+252 files in other folders)
