[tool.poetry]
name = "obuhersys-eval"
version = "1.0.0"
description = "Evaluation scripts for Obuhersys, based on a port of CamBench to NodeJS."
authors = ["PBR at UCLA <psibetarho@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
